<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.ceri.chomageen2mots.MainActivity">
    <item
        android:id="@+id/filtrer"
        android:title="@string/filtrer"
        app:showAsAction="ifRoom"
        android:visible="false"
        />
    <item
        android:id="@+id/fav_toogle"
        android:title=""
        app:showAsAction="ifRoom"
        android:visible="false"
        />
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="100"
        android:title="@string/favoris"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>