<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/JobSearchFragment">
    <fragment
        android:id="@+id/JobSearchFragment"
        android:name="fr.ceri.chomageen2mots.JobSearchFragment"
        android:label="@string/search_job_label"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_SearchFragment_to_ResultFragment"
            app:destination="@id/JobResultFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/JobResultFragment"
        android:name="fr.ceri.chomageen2mots.JobResultFragment"
        android:label="@string/job_result_label"
        tools:layout="@layout/fragment_job_result">

        <action
            android:id="@+id/action_ResultFragment_to_DetailsFragment"
            app:destination="@id/DetailFragment" />


        <argument
            android:name="keyword"
            android:defaultValue=""
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/FavoriteFragment"
        android:name="fr.ceri.chomageen2mots.FavoriteFragment"
        android:label="@string/favoris"
        tools:layout="@layout/fragment_favorite">

        <action
            android:id="@+id/action_favorite_to_details"
            app:destination="@id/DetailFragment" />
    </fragment>


    <fragment
        android:id="@+id/ConfigurationFragment"
        android:name="fr.ceri.chomageen2mots.ConfigurationFragment"
        android:label="@string/configuration_fragment"
        tools:layout="@layout/fragment_config" />


    <fragment
        android:id="@+id/DetailFragment"
        android:name="fr.ceri.chomageen2mots.DetailFragment"
        android:label="@string/details"
        tools:layout="@layout/details_fragment">
        <argument
            android:name="id"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="description"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="titre"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="jobInfo"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="imgUrl"
            android:defaultValue=""
            app:argType="string" />
    </fragment>

</navigation>